2006-07-19  John Finlay  <finlay@moeraki.com>

	* docs/Makefile.am: Use more portable date generator.

	* docs/xsl/ref-html-style.xsl: Add book to list of indexed items.

	* docs/xsl/html.xsl: Output xref links for unknown links.

	* docs/xsl/ref-html-style.xsl: Include refsect1 and refsect2 in
	indexed items but only if they have ids.

	* configure.ac (AC_CONFIG_FILES) : Add docs/reference/version.xml

	* docs/reference/pygobject-ref.xml: Add pygobject-introduction.xml
	and version and builddate entities. Remove commented out items.

	* docs/Makefile.am: Add reference/pygobject-introduction.xml and
	 reference/version.xml.in

2006-07-18  Johan Dahlin  <johan@gnome.org>

	* docs/Makefile.am (HTMLdir): Install book in $datadir/gtk-doc/html

2006-07-13  Johan Dahlin  <jdahlin@async.com.br>

	* gobject/gobjectmodule.c: (pyg_type_from_name),
	(get_type_name_for_class):
	* gobject/pygobject-private.h:
	* gobject/pygobject.c: (pygobject_new_with_interfaces),
	(pygobject_lookup_class), (pygobject_emit):
	* gobject/pygobject.h:
	* gobject/pygtype.c: (_wrap_g_type_from_name),
	(pyg_type_from_object), (pyg_type_register_custom_callback),
	(pyg_type_get_custom), (_pyg_type_from_name):
	Add infrastructure for lazy type registration, fixes #346947

2006-07-13  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* m4/python.m4: Properly quote AM_CHECK_PYMOD definition.

	* gobject/pygoptioncontext.c (pyg_option_context_parse): Fix mem
	leak.

2006-07-12  Johan Dahlin  <jdahlin@async.com.br>

	* Makefile.am:
	* configure.ac:
	* docs/.cvsignore:
	* docs/Makefile.am:
	* docs/common.xsl:
	* docs/devhelp.xsl:
	* docs/html.xsl:
	* docs/pdf-style.xsl:
	* docs/pdf.xsl:
	* docs/ref-html-style.xsl:
	* docs/reference/.cvsignore:
	* docs/reference/pygobject-classes.xml:
	* docs/reference/pygobject-constants.xml:
	* docs/reference/pygobject-functions.xml:
	* docs/reference/pygobject-gboxed.xml:
	* docs/reference/pygobject-ginterface.xml:
	* docs/reference/pygobject-gpointer.xml: