@@ -1,2 +1,4 @@
 *.html
 pygobject.devhelp
+builddate.xml
+version.xml
